--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+                "src/styles.css",
+                "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              ],
+              "scripts": [
+                "./node_modules/popper.js/dist/umd/popper.min.js"
+              ]
           },
           "configurations": {
             "production": {
